# Theragen-Project-Planer-BI

./: .gitignore  CHANGELOG.md  README.md  Theragen Project Planner.pbip
.githooks/: pre-commit
SampleData/: budget_line_item.csv  change_request.csv  closure_checklist_item.csv  department.csv  knowledge_area.csv  lesson_learned.csv  milestone.csv  person.csv  project.csv  project_team_member.csv  risk.csv  risk_response.csv  schedule_activity.csv  stakeholder.csv  status_report.csv  status_report_area.csv  wbs_element.csv
Theragen Project Planner.Report/: .platform  definition.pbir
Theragen Project Planner.SemanticModel/: .platform  diagramLayout.json
_source_extracts/: Compliance_Coverage.tsv  Cover.tsv  Cross_Schema_References.tsv  DM_DDL.tsv  DM_ERD.tsv  DM_Entities.tsv  DM_Enumerations.tsv  DM_Fields.tsv  DM_Indexes.tsv  (+12 more)
mcp/.servers/fabric-core/: fabric_mcp_stdio.py  pyproject.toml
mcp/.servers/fabric-core/helpers/clients/: __init__.py  fabric_client.py  lakehouse_client.py  notebook_client.py  onelake_client.py  report_client.py  semanticModel_client.py  sql_client.py  table_client.py  warehouse_client.py  workspace_client.py
mcp/.servers/fabric-core/helpers/utils/: context.py
mcp/.servers/fabric-core/tools/: __init__.py  admin.py  capacity.py  connection.py  deployment_pipeline.py  environment.py  git.py  graph.py  item_definition.py  items.py  lakehouse.py  load_data.py  notebook.py  onelake.py  pipeline.py  powerbi.py  raw_api.py  report.py  semantic_model.py  spark_job_definition.py  sql.py  sql_endpoint.py  table.py  warehouse.py  workspace.py
(+367 files in other folders)
